# urgr

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  opencode.json  package-lock.json  package.json
.github/workflows/: build-electron.yml  docker.yml
FBNeo/: _build_mode.json  _build_progress.json
FBNeo/v1.0.0.02/: _build_status.json
apps/build-cli/: Cargo.toml
apps/build-cli/src/: main.rs
apps/db-cli/: Cargo.toml
apps/db-cli/src/: main.rs
apps/ia-cli/: Cargo.toml
apps/ia-cli/src/: main.rs
apps/nps-cli/: Cargo.toml
apps/nps-cli/src/: main.rs
apps/parse-cli/: Cargo.toml
apps/parse-cli/src/: main.rs
apps/rom-manager-ui/: electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
apps/rom-manager-ui/docs/: APIDOCS.md  SPECS.md
apps/rom-manager-ui/electron/: main.cjs  preload.cjs
apps/rom-manager-ui/server/: cli-runner.js  cli.js  db-users.js  db.js  downloader.js  helpers.js  ia-auth.js  ia-cache.js  index.js  jobs.js  mediaCache.js  nps.js  paths.js  remote-zip.js  test-api.sh  test-cache.mjs  test-nps.mjs  test-version-sort.mjs  versionSort.js
apps/rom-manager-ui/server/operations/: build.js  export.js  import.js  index.js  progettosnaps.js  scan.js  scrape.js  syncAvailability.js  verify.js
apps/rom-manager-ui/server/routes/: collections.js  downloads.js  filesystem.js  game-sets.js  games.js  ia.js  misc.js  operations.js  scraper.js  versions.js
apps/rom-manager-ui/src/: App.css  App.jsx  api.js  main.jsx  platformEmulator.js  theme.js
apps/rom-manager-ui/tests/: ui.spec.js
apps/rom-scraper-cli/: Cargo.toml
apps/rom-scraper-cli/src/: main.rs
apps/scraper-cli/: Cargo.toml
apps/scraper-cli/src/: main.rs
docs/: api-reference.md  audit.md  cli-reference.md  developer-notes.md  extract-variant-info.md  goal.md  new-schema.md  operation-manager.md  scraper-analysis.md  scraper-cli.md  scraper-platform-matrix.md  specs.md  version-counts.md  version-fallback.md
docs/agent-sessions/: 2025-05-24-thegamesdb-default.md  2025-05-25-session.md  2025-05-26-scrape-persistence-reconnect.md  2026-05-22-rom-scraper-library.md  2026-05-22-session.md  2026-05-23-session.md  2026-05-25-session.md  2026-05-26-session.md  2026-05-27-session.md  2026-06-02-game-state-session.md  2026-06-02-session.md  2026-06-08-session-2.md  2026-06-08-session-3.md  2026-06-08-session.md  2026-06-09-session.md  2026-06-10-session.md  2026-06-14-session-2.md  2026-06-14-session-3.md  2026-06-14-session-4.md  2026-06-14-session.md  2026-06-15-collection-edit-tabs.md  2026-06-15-mame-version-nickname-fix.md  2026-06-15-sony-store-screenshots.md  2026-06-16-session.md  2026-06-17-session.md  2026-06-22-session.md  2026-06-22-translations-scrapers.md  2026-06-26-session.md
libs/ia-archive/: Cargo.toml
libs/ia-archive/src/: download.rs  lib.rs  login.rs  metadata.rs  remote_zip.rs  search.rs  verify_crc.rs
libs/rom-manager/: Cargo.toml
libs/rom-manager/src/: builder.rs  error.rs  lib.rs  models.rs  scanner.rs  verifier.rs
libs/rom-manager/src/dat/: clrmamepro.rs  logiqx.rs  mame.rs  mod.rs  offlinelist.rs  write.rs
libs/rom-manager/src/db/: mod.rs  schema.rs
libs/rom-manager/tests/: real_dat_files.rs
libs/rom-scraper/: Cargo.toml
libs/rom-scraper/src/: client.rs  config.rs  error.rs  hasher.rs  lib.rs  matcher.rs  models.rs  rate_limiter.rs
libs/rom-scraper/src/sources/: arcadedb.rs  igdb.rs  libretro_thumbnails.rs  mobygames.rs  mod.rs  no_intro_pictures.rs  retroachievements.rs  screenscraper.rs  sony_store.rs  steamgriddb.rs  thegamesdb.rs  vgmuseum.rs
scripts/: build-translations.mjs
translate/: gen_translations.py  mame_cn.lst  missing_names.txt
(+36 files in other folders)
