[package]
name = "build-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rom-manager = { path = "../../libs/rom-manager" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
