[package]
name = "nps-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rom-manager = { path = "../../libs/rom-manager" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
