[package]
name = "rom-scraper-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rom-manager = { path = "../../libs/rom-manager" }
rom-scraper = { path = "../../libs/rom-scraper" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
